--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <img v-bind:src="image" />
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <p v-show="onSale">On Sale</p>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory > 0 && inventory <= 10">
+              Almost sold out!!
+            </p>
+            <p v-else>Out of Stock</p>
           </div>
         </div>
       </div>
@@ -29,7 +35,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app')
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
