--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h1>{{ title }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+            <p>{{onSale}}</p>
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
